レスポンスを統一するためにラッパークラスを作成