@@ -1,5 +1,6 @@
 package com.example.three_layer.controller;
 
+import com.example.three_layer.common.ApiResponse;
 import com.example.three_layer.dto.TaskItem3PatchRequest;
 import com.example.three_layer.dto.TaskItem3Request;
 import com.example.three_layer.dto.TaskItem3Response;
@@ -11,7 +12,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -40,34 +40,40 @@ public class TaskItem3Controller {
 
   @Operation(summary = "タスク一覧取得")
   @GetMapping
-  public List<TaskItem3Response> getAll() {
+  public ApiResponse<List<TaskItem3Response>> getAll() {
     List<TaskItem3> taskItems = service.findAll();
-    return taskItems.stream().map(mapper::toDTO).collect(Collectors.toList());
+    var result = taskItems.stream().map(mapper::toDTO).toList();
+    return ApiResponse.ok(result);
   }
 
   @Operation(summary = "タスク追加")
   @PostMapping
-  public TaskItem3Response addTaskItem(@RequestBody @Valid TaskItem3Request req) {
-    return mapper.toDTO(service.save(req));
+  public ApiResponse<TaskItem3Response> addTaskItem(@RequestBody @Valid TaskItem3Request req) {
+    var result = mapper.toDTO(service.save(req));
+    return ApiResponse.ok(result);
   }
 
   @Operation(summary = "タスク更新")
   @PutMapping("/{id}")
-  public TaskItem3Response updateTaskItem(
+  public ApiResponse<TaskItem3Response> updateTaskItem(
       @PathVariable Integer id, @RequestBody @Valid TaskItem3UpdateRequest req) {
-    return mapper.toDTO(service.update(id, req));
+    var result = mapper.toDTO(service.update(id, req));
+    return ApiResponse.ok(result);
   }
 
   @Operation(summary = "タスク部分更新")
   @PatchMapping("/{id}")
-  public TaskItem3Response patchTaskItem(
+  public ApiResponse<TaskItem3Response> patchTaskItem(
       @PathVariable Integer id, @RequestBody @Valid TaskItem3PatchRequest req) {
-    return mapper.toDTO(service.partialUpdate(id, req));
+    var result = mapper.toDTO(service.partialUpdate(id, req));
+    return ApiResponse.ok(result);
   }
 
   @Operation(summary = "タスク削除")
   @DeleteMapping("/{id}")
-  public void deleteTaskItem(@PathVariable Integer id) { // @PathVariable: URLに含まれる変数を引数として受け取る
+  public ApiResponse<Void> deleteTaskItem(
+      @PathVariable Integer id) { // @PathVariable: URLに含まれる変数を引数として受け取る
     service.deleteById(id);
+    return ApiResponse.ok(null);
   }
 }
